--- a/ParticleSandbox-cxww44/index.html
+++ b/ParticleSandbox-cxww44/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
+<meta charset="UTF-8"> 
 <html>
     <head>
-    <script src="ParticleSandbox.js" type="text/javascript"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.min.js" type="text/javascript"></script>
+    <script src="ParticleSandbox.js" type="text/javascript"></script><script src="index.js" type="text/javascript"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.min.js" type="text/javascript"></script>
     </head>
 <body>
 </body>
