--- a/ParticleSandbox-cxww44/index.html
+++ b/ParticleSandbox-cxww44/index.html
@@ -2,7 +2,15 @@
 <meta charset="UTF-8"> 
 <html>
     <head>
-    <script src="ParticleSandbox.js" type="text/javascript"></script><script src="index.js" type="text/javascript"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.min.js" type="text/javascript"></script>
+    <script src="ParticleSandbox.js" type="text/javascript"></script>
+    <script src="index.js" type="text/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.min.js" type="text/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.6.5/dat.gui.min.js" type="text/javascript"></script>
+    
+    <style type="text/css">
+        body {margin:0; padding:0;} /* remove top and left whitespace */
+        canvas {display:block;}    /* remove scrollbars */
+    </style>
     </head>
 <body>
 </body>
