--- a/ParticleSandbox-cxww44/index.html
+++ b/ParticleSandbox-cxww44/index.html
@@ -30,9 +30,10 @@
             <table align="center">
                 <tr>
                 <td>Number of Particles:</td>
-                <td>Velocity of Particles:</td>
+                <td>Initial Velocity:</td>
                 <td>Particle Drag:</td>
                 <td>Mouse Threshold:</td>
+                <td>   Invert:   </td>
                 <td>Default Settings:</td>
                 <td>Reset the Screen:</td>
                 <tr>
@@ -40,6 +41,7 @@
                 <td><input type="range" min="0" max="0.010" step = "0.001" value="0.001" id="mult" onchange="update()"/></td>
                 <td><input type="range" min="0" max="1" step = "0.001" value="1" id="drag" onchange="update()"/></td>
                 <td><input type="range" min="0" max="1" step = "0.001" value="1" id="mouseThresh" onchange="update()"/></td>
+                <td><button type="button" id="Invert" onclick="revert()">Invert</button></td>
                 <td><button type="button" id="Default" onclick="revert()">Default</button></td>
                 <td><button type="button" id="Reset" onclick="revert()">Reset</button></td>
                 </tr>
