--- a/ParticleSandbox-cxww44/index.html
+++ b/ParticleSandbox-cxww44/index.html
@@ -34,8 +34,8 @@
                 <td>Speed Limit:</td>
                 <td>Mouse Threshold:</td>
                 <td>   Invert:   </td>
-                <td>Default Settings:</td>
-                <td>Clear the Screen:</td>
+                <td>Default:</td>
+                <td>Clear Screen:</td>
                 <tr>
                 <td><input type="number" min="0" max="10000" step="1" value="3000" id="pCount" oninput="revert()" /></td>
                 <td><input type="range" min="0" max="0.010" step = "0.001" value="0.001" id="mult" onchange="update()"/></td>
