--- a/ParticleSandbox-cxww44/index.html
+++ b/ParticleSandbox-cxww44/index.html
@@ -33,7 +33,8 @@
                 <td>Acceleration:</td>
                 <td>Speed Limit:</td>
                 <td>Mouse Threshold:</td>
-                <td>   Invert:   </td>
+                <td>Hue Rate of Change</td>
+                <td>Invert:</td>
                 <td>Default:</td>
                 <td>Clear Screen:</td>
                 <tr>
@@ -41,6 +42,7 @@
                 <td><input type="range" min="0" max="0.010" step = "0.001" value="0.001" id="mult" onchange="update()"/></td>
                 <td><input type="range" min="0" max="10" step = "1" value="6" id="drag" onchange="update()"/></td>
                 <td><input type="range" min="0" max="600" step = "50" value="300" id="mouseThresh" onchange="update()"/></td>
+                <td><input type="range" min="0" max="10" step = "1" value="1" id="hueChange" onchange="update()"/></td>
                 <td><button type="button" id="Invert" onclick="invert()">Invert</button></td>
                 <td><button type="button" id="Default" onclick="defreset()">Default</button></td>
                 <td><button type="button" id="Clear" onclick="revert()">Clear</button></td>
