--- a/ParticleSandbox-cxww44/index.html
+++ b/ParticleSandbox-cxww44/index.html
@@ -18,6 +18,7 @@
             width: 100%;
             background-color: black;
             color: white;
+            font-family: 'Helvetica', 'Arial', sans-serif;
             text-align: center;
         }
         table.center {
@@ -36,7 +37,7 @@
                 <td>Acceleration:</td>
                 <td>Speed Limit:</td>
                 <td>Mouse Threshold:</td>
-                <td>Hue Rate of Change</td>
+                <td>Hue Rate of Change:</td>
                 <td>Invert:</td>
                 <td>Default:</td>
                 <td>Clear Screen:</td>
