Added scope for p5 renderer

--- a/ParticleSandbox-cxww44/index.html
+++ b/ParticleSandbox-cxww44/index.html
@@ -39,7 +39,7 @@
                 <td>Mouse Threshold:</td>
                 <td>Hue Rate of Change:</td>
                 <td>Invert:</td>
-                <td>Default:</td>
+                <td>Defaults:</td>
                 <td>Clear Screen:</td>
                 <tr>
                 <td><input type="number" min="0" max="10000" step="1" value="3000" id="pCount" oninput="revert()" /></td>
